--- a/.github/workflows/etl-schedule.yaml
+++ b/.github/workflows/etl-schedule.yaml
@@ -13,6 +13,13 @@ on:
 jobs:
   run-etl:
     runs-on: ubuntu-latest
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }} 
+      GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}}
+      ASISTENCIA_SHEET_ID: ${{ secrets.ASISTENCIA_SHEET_ID }}
+      WORKSHEET_NAME_1: ${{ secrets.WORKSHEET_NAME_1 }}
+      WORKSHEET_NAME_2: ${{ secrets.WORKSHEET_NAME_2 }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
