--- a/.github/workflows/etl-schedule.yaml
+++ b/.github/workflows/etl-schedule.yaml
@@ -1,4 +1,4 @@
-name: ETL - Programado
+name: "ETL - Programado"
 
 on:
   # Edita la expresión cron abajo para fijar la fecha/horario deseado (UTC)
@@ -113,51 +113,11 @@ jobs:
               python -m pip install --upgrade pip
               if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-          - name: Verify GOOGLE_SERVICE_ACCOUNT_JSON format
+            - name: Verify GOOGLE_SERVICE_ACCOUNT_JSON format
             env:
               GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
             run: |
-              python - <<'PY'
-    import os, json, base64, binascii
-    s = os.environ.get('GOOGLE_SERVICE_ACCOUNT_JSON','')
-    def detector(s):
-        try:
-            json.loads(s)
-            return 'raw'
-        except Exception:
-            pass
-        try:
-            json.loads(s.replace('\\n','\n'))
-            return 'escaped_newlines'
-        except Exception:
-            pass
-        try:
-            base64.b64decode(s)
-            dec = base64.b64decode(s).decode('utf-8')
-            json.loads(dec)
-            return 'base64'
-        except Exception:
-            pass
-        return 'invalid'
-
-    res = detector(s)
-    print('DETECTOR_RESULT:', res)
-    if res != 'invalid':
-        if res == 'base64':
-            d = base64.b64decode(s).decode('utf-8')
-        elif res == 'escaped_newlines':
-            d = s.replace('\\n','\n')
-        else:
-            d = s
-        obj = json.loads(d)
-        # Mostrar sólo las keys y longitud de private_key (no su contenido)
-        print('KEYS:', list(obj.keys()))
-        pk = obj.get('private_key','')
-        print('private_key_length:', len(pk) if isinstance(pk, str) else 0)
-    else:
-        print('ERROR: formato inválido para GOOGLE_SERVICE_ACCOUNT_JSON')
-    PY
-            shell: bash
+              python .github/scripts/verify_service_account.py
 
           - name: Run ETL pipeline
             run: |
