--- a/.github/workflows/etl-schedule.yaml
+++ b/.github/workflows/etl-schedule.yaml
@@ -1,13 +1,12 @@
 name: "ETL - Programado"
 
 on:
-  # Edita la expresión cron abajo para fijar la fecha/horario deseado (UTC)
   schedule:
-    - cron: '0 7 1 * *' # ejemplo: cada mes el día 15 a las 06:00 UTC
+    - cron: '0 7 1 * *'
   workflow_dispatch:
     inputs:
       cron:
-        description: 'Cron schedule (opcional) — referencia'
+        description: 'Cron schedule (opcional)'
         required: false
 
 jobs:
@@ -24,108 +23,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      name: "ETL - Programado"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-      on:
-        # Edita la expresión cron abajo para fijar la fecha/horario deseado (UTC)
-        schedule:
-          - cron: '0 7 1 * *' # ejemplo: cada mes el día 1 a las 07:00 UTC
-        workflow_dispatch:
-          inputs:
-            cron:
-              description: 'Cron schedule (opcional) — referencia'
-              required: false
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      jobs:
-        run-etl:
-          runs-on: ubuntu-latest
-          env:
-            SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-            SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-            GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-            ASISTENCIA_SHEET_ID: ${{ secrets.ASISTENCIA_SHEET_ID }}
-            WORKSHEET_NAME_1: ${{ secrets.WORKSHEET_NAME_1 }}
-            WORKSHEET_NAME_2: ${{ secrets.WORKSHEET_NAME_2 }}
-          steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-
-            - name: Set up Python
-              uses: actions/setup-python@v4
-              with:
-                python-version: '3.x'
-
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-            - name: Verify GOOGLE_SERVICE_ACCOUNT_JSON format
-              env:
-                GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-              run: python .github/scripts/verify_service_account.py
-
-            - name: Run ETL pipeline
-              run: |
-                python etl/pipeline.py
-
-      # Notas:
-      # - Modifica la línea `cron` en la sección `schedule` para ajustar la fecha/horario.
-      # - GitHub Actions usa UTC para cron expressions.
-      # - Ejemplos de cron:
-      #   - Cada mes día 27 a 09:00 UTC: '0 9 27 * *'
-      #   - Cada año 27 diciembre a 09:00 UTC: '0 9 27 12 *'
-      print('ERROR: formato inválido para GOOGLE_SERVICE_ACCOUNT_JSON')
-    name: ETL - Programado
-
-    on:
-      # Edita la expresión cron abajo para fijar la fecha/horario deseado (UTC)
-      schedule:
-        - cron: '0 7 1 * *' # ejemplo: cada mes el día 1 a las 07:00 UTC
-      workflow_dispatch:
-        inputs:
-          cron:
-            description: 'Cron schedule (opcional) — referencia'
-            required: false
-
-    jobs:
-      run-etl:
-        runs-on: ubuntu-latest
+      - name: Verify GOOGLE_SERVICE_ACCOUNT_JSON format
         env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-          ASISTENCIA_SHEET_ID: ${{ secrets.ASISTENCIA_SHEET_ID }}
-          WORKSHEET_NAME_1: ${{ secrets.WORKSHEET_NAME_1 }}
-          WORKSHEET_NAME_2: ${{ secrets.WORKSHEET_NAME_2 }}
-        steps:
-          - name: Checkout repository
-            uses: actions/checkout@v4
+        run: python .github/scripts/verify_service_account.py
 
-          - name: Set up Python
-            uses: actions/setup-python@v4
-            with:
-              python-version: '3.x'
-
-          - name: Install dependencies
-            run: |
-              python -m pip install --upgrade pip
-              if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-            - name: Verify GOOGLE_SERVICE_ACCOUNT_JSON format
-            env:
-              GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-            run: |
-              python .github/scripts/verify_service_account.py
-
-          - name: Run ETL pipeline
-            run: |
-              python etl/pipeline.py
-
-
-    # Notas:
-    # - Modifica la línea `cron` en la sección `schedule` para ajustar la fecha/horario.
-    # - GitHub Actions usa UTC para cron expressions.
-    # - Ejemplos de cron:
-    #   - Cada mes día 27 a 09:00 UTC: '0 9 27 * *'
-    #   - Cada año 27 diciembre a 09:00 UTC: '0 9 27 12 *'
+      - name: Run ETL pipeline
+        run: |
+          python etl/pipeline.py
